
2021-07-02  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: moved definitions of INDEXED related variables for the
	  build / test system to a single place, added missing variants

2021-04-27  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Add check for  'readline'

2021-04-07  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for CC when applying aix hack additional to CFLAGS
	* configure.ac: ncurses test: check for ncurses.h, not curses.h

2021-03-07  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: new COBC_CPPFLAGS will be used in cobc generation
	* configure.ac: version 3.2-dev

2021-02-21  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Fix error with C-ISAM checks and  changes to use
	  subroutine reset_isam_check --with-indexed should not select OCI or ODBC

2021-02-19  Ron Norman <rjn@inglenet.com> 

	* configure.ac: If no ISAM is requested, check if any are present
	  If any ISAM is requested, do not check the others

2021-02-18  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Changes removing VB-CISAM and adding V-ISAM

2021-01-22  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Some fixes to the previous changes

2021-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* configure.ac: rewritten checks for indexed handlers and
	  allow to pass specific flags via xyz_CFLAGS and xyz_LIBS,
	  AC_SUBST those for libcob/Makefile.am

2021-01-15  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated check for D-ISAM isconfig.h and isintstd.h

2021-01-14  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated to search D-ISAM library/header in different order
		
2020-12-24  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updated to build all INDEXED file handlers
		as shared code library
		
2020-12-23  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updates to build most INDEXED file handlers
		as shared code library
		
2020-12-16  Ron Norman <rjn@inglenet.com> 

	* configure.ac: Updates to accept --with-vbcisam